--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ position: relative;
 
 }
 .aboutmepara{
-	font-family:monospace;
+	font-family:timesnewroman;
 	padding: 30px 10px 0px 10px;
 	font-size: 20px;
 	overflow: hidden;
