--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color:#5DADE2;
-	background-image:url(img/github.png);
+	background-image:url(img/link.png);
 	height: 40px;
 	width: 40px;
 	margin-right: 5px;
