--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body{
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color:#5DADE2;
-	background-image:url(img/phone.png);
+	background-image:url(img/github.png);
 	height: 40px;
 	width: 40px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
