--- a/style.css
+++ b/style.css
@@ -237,7 +237,8 @@ padding-left: 0px;
 	border-bottom:2.5px solid #525151;
 	padding: 0;
 }
-.flipcont{
+.
+{
 	margin-top: 70px;
 }
 .prohead > h3{
@@ -408,9 +409,15 @@ padding-left: 0px;
 	width: 100%;
 	height: 400px;
 }
+	.flipcont_2{
+		margin-top:150px;
+	}
 }
 
 @media (max-width: 767px){
+		.flipcont_2{
+		margin-top:50px;
+	}
 	.header{
 		padding: 45px;
 	}
